# TestSmitStudio

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/app/api/: app.py
app/app/api/cost_insurance/: routers.py  schemas.py
app/app/api/tariff/: routers.py  schemas.py
app/configs/: __init__.py  database.py  general.py  message_broker.py
app/domain/: base.py  cargo.py  tariff.py
app/domain/events/: tariff.py
app/infra/: database.py
app/infra/filters/: base.py  tariff.py
app/infra/message_broker/converters/: base.py
app/infra/message_broker/converters/tariff/: convert_methods.py  tariff_converter.py
app/infra/message_broker/producer/: base.py  tariff.py
app/infra/models/: base_model.py  tariff.py
app/infra/repositories/: base.py  tariff.py
app/logic/: container.py  mediator.py
app/logic/commands/: base.py
app/logic/commands/tariff/: commands.py  handlers.py
app/logic/events/: base.py
app/logic/exceptions/: mediator.py
app/logic/queryes/: base.py
app/logic/queryes/tariff/: handlers.py  queryes.py
docker_compose/: app.yaml  storages.yaml
migrations/: env.py
migrations/versions/: 2024_11_18_2326-initial_migration.py
